--- a/util-files/pom.xml
+++ b/util-files/pom.xml
@@ -8,9 +8,7 @@
 		<artifactId>util</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.limingming</groupId>
 	<artifactId>util-files</artifactId>
-	<version>1.0</version>
 	<name>util-files</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -28,5 +26,65 @@
 			<artifactId>ant</artifactId>
 			<version>1.9.7</version>
 		</dependency>
+
+		<!-- word添加包 -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		<!-- <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-examples</artifactId>
+			<version>3.14</version>
+		</dependency> -->
+		<!-- <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-excelant</artifactId>
+			<version>3.14</version>
+		</dependency> -->
+		<!-- <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.14</version>
+		</dependency> -->
+		<!-- <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.14</version>
+		</dependency> -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>3.14</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>fr.opensagres.xdocreport.document</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>org.apache.poi.xwpf.converter.xhtml</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+
 	</dependencies>
+
+	<!-- 配置私服使用信息 -->
+	<repositories>
+		<repository>
+			<id>nexus-jar</id>
+			<name>Team Nexus jar Repository</name>
+			<url>http://10.110.13.14:8081/nexus/content/groups/inspur-loushang/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>nexus-plugin</id>
+			<name>Team Nexus plugin Repository</name>
+			<url>http://10.110.13.14:8081/nexus/content/groups/inspur-loushang/</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
