--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,26 @@
   <modules>
     <module>util-files</module>
     <module>util-security</module>
-      <module>util-common</module>
+    <module>util-common</module>
+    <module>util-other</module>
   </modules>
+
+  <build>
+           <plugins>
+  			<plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+  				<artifactId>maven-compiler-plugin</artifactId>
+  				<version>3.0</version>
+  				<configuration>
+  					<encoding>utf-8</encoding>
+  					<source>1.8</source>
+  					<target>1.8</target>
+  					<showDeprecation>true</showDeprecation>
+  					<showWarnings>true</showWarnings>
+  					<debug>true</debug>
+  				</configuration>
+  			</plugin>
+  		</plugins>
+  	</build>
+
 </project>
