--- a/util-security/pom.xml
+++ b/util-security/pom.xml
@@ -20,10 +20,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+  <!--  <dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcprov-jdk14</artifactId>
 			<version>1.38</version>
 		</dependency>
+  -->
   </dependencies>
 </project>
